reading documentation and doing the tutorial
