# public/docs/openapi.json
@@ -443,6 +443,295 @@
                 ]
             }
         },
+        "/example/crud/{id}": {
+            "get": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Get the ExampleCrud by id",
+                "operationId": "GET::/example/crud/{id}::MyRest\\Rest\\ExampleCrudRest::getExampleCrud",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The object ExampleCrud",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ExampleCrud"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            }
+        },
+        "/example/crud": {
+            "get": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "List ExampleCrud",
+                "operationId": "GET::/example/crud::MyRest\\Rest\\ExampleCrudRest::listExampleCrud",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "description": "Page size",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "orderBy",
+                        "in": "query",
+                        "description": "Order by",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "filter",
+                        "in": "query",
+                        "description": "Filter",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The object ExampleCrud",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ExampleCrud"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Update an existing ExampleCrud",
+                "operationId": "PUT::/example/crud::MyRest\\Rest\\ExampleCrudRest::putExampleCrud",
+                "requestBody": {
+                    "description": "The object ExampleCrud to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ExampleCrud"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Nothing to return"
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Example"
+                ],
+                "summary": "Create a new ExampleCrud",
+                "operationId": "POST::/example/crud::MyRest\\Rest\\ExampleCrudRest::postExampleCrud",
+                "requestBody": {
+                    "description": "The object ExampleCrud to be created",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "birthdate": {
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "nullable": true
+                                    },
+                                    "code": {
+                                        "type": "integer",
+                                        "format": "int32",
+                                        "nullable": true
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "nullable": true
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The object rto be created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "id"
+                                    ],
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            }
+        },
+        "/example/crud/status": {
+            "put": {
+                "tags": [
+                    "Example"
+                ],
+                "description": "Update the status of the ExampleCrud",
+                "operationId": "PUT::/example/crud/status::MyRest\\Rest\\ExampleCrudRest::putExampleCrudStatus",
+                "requestBody": {
+                    "description": "The status to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "format": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The object rto be created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "result"
+                                    ],
+                                    "properties": {
+                                        "result": {
+                                            "type": "string",
+                                            "format": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt-token": []
+                    }
+                ]
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
@@ -918,6 +1207,47 @@
                     "name": "DummyHex"
                 }
             },
+            "ExampleCrud": {
+                "description": "Class ExampleCrud",
+                "required": [
+                    "id",
+                    "name"
+                ],
+                "properties": {
+                    "": {
+                        "type": "string",
+                        "format": "string",
+                        "nullable": true
+                    },
+                    "id": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "name": {
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "birthdate": {
+                        "type": "string",
+                        "format": "date-time",
+                        "nullable": true
+                    },
+                    "code": {
+                        "type": "integer",
+                        "format": "int32",
+                        "nullable": true
+                    },
+                    "status": {
+                        "type": "string",
+                        "format": "string",
+                        "nullable": true
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "ExampleCrud"
+                }
+            },
             "User": {
                 "required": [
                     "email"
@@ -1008,5 +1338,31 @@
                 "in": "header"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Dummyhex",
+            "description": "Dummyhex"
+        },
+        {
+            "name": "Dummy",
+            "description": "Dummy"
+        },
+        {
+            "name": "Example",
+            "description": "Example"
+        },
+        {
+            "name": "Login",
+            "description": "Login"
+        },
+        {
+            "name": "zz_sample",
+            "description": "zz_sample"
+        },
+        {
+            "name": "zz_sampleprotected",
+            "description": "zz_sampleprotected"
+        }
+    ]
 }
